Improve links in collections

--- a/_zettelkasten/2024-10-07-jekyll.md
+++ b/_zettelkasten/2024-10-07-jekyll.md
@@ -2,6 +2,7 @@
 layout: page
 title: "Jekyll"
 entry: true
+zettel_id: 2024-10-07-jekyll
 ---
 
 ## What is Jekyll
@@ -21,3 +22,9 @@ It uses [Liquid as the templating engine][jekyll-liquid].
 ---
 
 ## Backlinks
+
+{% assign backlinks = site.zettelkasten | where: "zettel_refs", page.zettel_id %}
+{% for backlink in backlinks %}
+* [{{backlink.title}}]({{backlink.url}})
+{% endfor %}
+
