Improve project structure and planning

--- a/_projects/personal-blog/discussions/2024-10-10-2334-structure.md
+++ b/_projects/personal-blog/discussions/2024-10-10-2334-structure.md
@@ -2,7 +2,10 @@
 title: "Structure"
 project: personal-blog
 category: discussion
+open: true
 ---
+[2024-10-10-log]: {% link _projects/personal-blog/log/2024-10-10-2334.md %}
+[2024-10-15-log]: {% link _projects/personal-blog/log/2024-10-15-2142.md %}
 
 ## Conclusion
 
@@ -17,30 +20,46 @@ _projects/
             |- logs/
             |- reports/
             `- discussions/
+                `- closed/
 _notebook/
 ```
 
 ### Projects
 
-Each project will have a index page, containing general information. Even if a project is just an ideia, this page can outline motivation and link to inspirations.
+#### Planning
 
-Once a project begins to grow and has a more concrete plan, we move those ideas and references into the discussions folder. This is a free space to take notes, keep inspirations, and think of next steps. From these discussions, I'll decide to implement a feature or not, give priorities, etc. The conclusion of these should be kept in the plan and link to the discussion page.
+Each project will have an index page containing general information. If a project is just an ideia, this page can outline motivation and link to inspirations. Once a project begins to grow and has a more concrete plan, those ideas and references will be kept into the discussions folder. This is a free space to take notes, keep inspirations, and think of next steps. From these will come the decisions on which features to implement, define priorities, etc. To keep things clean and clear, there will be a conclusions section.
 
-Once the decision to implement a feature is made, it will either result in clear enough plan, laid out as conclusion of the discussion, or in a more complex feature index, with each's own task and plan. Either way, during implementation the decisions made and information collected should be noted in the logs. These are checkpoints for saving work, and keeping track of information. I wish every time I set out to do something I could complete it uninterupted, but more often than not we'll need to take breaks, change focus, and come back later (which is actually a good thing). These should have all the needed information to pick back up where you left - even if starting from a blank workspace.
+In case the conclusion is to implement a feature, a plan needs to be laid out. This can be done directly in the conclusion section for simpler features or by creating a substructure, with it's own index page containing the plan. 
 
-Once the decision to implement a feature is made, the learning and decisions should provide a report. The reports should include and link to relevant information, including code snippets and time spent. These pieces should be replicated into other relevant places, like a snippets page for the relevant technology, and linked both ways. This report is way to revisit the logs, organize the information, and take whats most useful.
+#### Monitoring
+
+During implementation the smaller decisions (such as whether to implement using X or Y design pattern), references, and other information should be noted in the logs. These are the real-life save files. They should have all the information necessary to pick back up where you left - even if starting from a blank workspace.
+
+#### Reviewing
+
+Once a feature is implemented or a milestone is reached, the logs should be revised into a report. Reviewing relevant information, code snippets, time spent, what went right and what might have been better if done differently. The reports should provide a concise view of the work done and serve as a reference for similar work in the future.
 
 ### Notebook
 
-For general essays I'll simply keep notes of ideas and of references. I'll sure a structure will come up as I'll use and revisit them.
+For general essays I'll simply keep notes of ideas and references. I'm sure a structure will come up as I'll use and revisit them.
 
 ---
 
-## Raw Starter
+## Notes
 
-So I am having waaay too many thoughts and a hard time trying to organize my thoughts in a zettelkasten. It is a method I do not know, so probably no the best one to start, when I am just satarting out this blog. Instead I should probably try to reimplement things I do have done before and possibly pass on to zettelkasten. Although the idea of many notes that connet seem nice, I much rather have some locallity of behaviour, like have longer pages where each section is a zettel.
+**2024-10-10**
 
-But even before having any zettel I should first add a little more structure to the project planning, and plan for the iterations, and plan for a know workflow. **To get moving, implement the past of least resistence.** Once you are already moving, then you can start to drive, give direction. 
+See [log][2024-10-10-log] for raw notes.
 
-Once features are implemented, the learning and decisions should provide a report. The reports should include and link to relevant information including code snippets and time spent.
+> **To get moving, implement the path of least resistence.**
 
+I have planned out the structure of the projects, based on what I've done previously (especially what I came up during the [negligent-octopus] project).
+
+Besides this, I have decided not to plan too much of other notes. Although I have some ideas, they are still too foggy to even write down concisely. The solution I found is to not overthink and start notetaking. I'll reeval the structure when I have some more experience.
+
+**2024-10-15**
+
+See [log][2024-10-15-log] for raw notes.
+
+* Index should be a guiding page: contain **Goals**, **Scope**, **Roadmap**. List **Discussions**, **Logs**, **Reports**.
