s4ge: add log to implement v0.1.0

--- a/_projects/s4age-static-site-generator/discussions/2024-12-02-version-0.1.0.md
+++ b/_projects/s4age-static-site-generator/discussions/2024-12-02-version-0.1.0.md
@@ -13,9 +13,12 @@ date: 2024-12-02
 [mistletoe]: https://github.com/miyuchina/mistletoe
 [commonmark-implementations]: https://github.com/commonmark/commonmark-spec/wiki/list-of-commonmark-implementations
 [Jinja2]: https://jinja.palletsprojects.com/en/stable/
+[related-log]: {% link _projects/s4ge-static-site-generator/logs/2024-12-03-version-0.1.0.md %}
 
 
 ## Conclusion
+
+> To track implementation check out [the related log][related-log].
 
 Run a **build process** on a source, producing an output. Therefore the best tool for the job is **build tool**, like [Make]. However, since we want to keep things in the Python world we'll use **[doit]**.
 
