s4ge: mark discussions open / closed

--- a/_projects/s4ge-static-site-generator/discussions/2024-12-02-version-0.1.0.md
+++ b/_projects/s4ge-static-site-generator/discussions/2024-12-02-version-0.1.0.md
@@ -3,6 +3,7 @@ title: Version 0.1.0
 category: discussion
 project: s4ge
 date: 2024-12-02
+open: true
 ---
 [Urubu]: https://urubu.jandecaluwe.com/
 [yaml-intro]: https://www.yaml.info/learn/index.html
