--- a/_projects/pink-space/discussions/2024-10-10-2334-structure.md
+++ b/_projects/pink-space/discussions/2024-10-10-2334-structure.md
@@ -1,11 +1,11 @@
 ---
 title: "Structure"
-project: personal-blog
+project: pink-space
 category: discussion
 open: true
 ---
-[2024-10-10-log]: {% link _projects/personal-blog/log/2024-10-10-2334.md %}
-[2024-10-15-log]: {% link _projects/personal-blog/log/2024-10-15-2142.md %}
+[2024-10-10-log]: {% link _projects/pink-space/log/2024-10-10-2334.md %}
+[2024-10-15-log]: {% link _projects/pink-space/log/2024-10-15-2142.md %}
 
 ## Conclusion
 
@@ -30,7 +30,7 @@ _notebook/
 
 Each project will have an index page containing general information. If a project is just an ideia, this page can outline motivation and link to inspirations. Once a project begins to grow and has a more concrete plan, those ideas and references will be kept into the discussions folder. This is a free space to take notes, keep inspirations, and think of next steps. From these will come the decisions on which features to implement, define priorities, etc. To keep things clean and clear, there will be a conclusions section.
 
-In case the conclusion is to implement a feature, a plan needs to be laid out. This can be done directly in the conclusion section for simpler features or by creating a substructure, with it's own index page containing the plan. 
+In case the conclusion is to implement a feature, a plan needs to be laid out. This can be done directly in the conclusion section for simpler features or by creating a substructure, with it's own index page containing the plan.
 
 #### Monitoring
 
